--- a/c/gcov/readme
+++ b/c/gcov/readme
@@ -1,8 +1,10 @@
+gcov是一个测试代码覆盖率的工具
+
 这个例子展示了两种使用gcov的可能性：
 1、一个文件的简单测试程序
 2、一个目录的完整实用程序
 
-对于简单测试程序来说，只需要使用“gcc -ftest-coverage -fprofile-arcs foo”生成可执行文件“.gcno文件”即可，
+对于简单测试程序来说，只需要使用“gcc -ftest-coverage -fprofile-arcs foo.c”生成可执行文件“.gcno文件”即可，
 然后直接运行程序，会生成.gcda文件，使用gcov操作.gcda文件，生成.gcov文件，最后直接用编辑器查看“.gcov文件”的测试结果
 
 对于有完整目录的实际程序来说，由于源代码分布于多个不同的目录，所以结束gcov命令的-o选项来达到查看测试文件的目的
